Fix Chrome squashing text

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -94,6 +94,11 @@ h1, h2, h3 {
     margin: 10px;
 }
 
+.info-ref li {
+    /* Chrome rendering fix */
+    line-height: 9pt;
+}
+
 #waifu, #snow {
     position: absolute;
     display: block;
@@ -257,6 +262,8 @@ l.tab-label:hover {
 
 .settings-individual{
     font-size: 8pt;
+    /* Chrome rendering fix */
+    line-height: 9pt;
     padding-left: 10px;
 }
 
